R: fixing white space after main in mobile

--- a/styles/main_css_grid.css
+++ b/styles/main_css_grid.css
@@ -31,38 +31,6 @@
 }
 
 
-@media(max-width:991px){
-  .bannermain {
-    display: grid;
-  
-    grid-template-columns: 12% 75% 10%; /*tres columnas de igual ancho*/
-    
-  
-    /* grid-template-rows: 15% 75%; */
-     margin-bottom: 5vh; 
-  
-    background-size: auto, cover;
-    /* height: 100vh; */
-    /* max-height: 100vh;  */
-    
-   
-  
-  
-    background-repeat: no-repeat;
-   
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  /* 
-    background-image: linear-gradient(
-         215deg,
-        rgba(36, 50, 90, 0.95),
-        rgba(67, 183, 174, 0.8)
-      ),
-      url("/img/image01.jpg");
-    clip-path: polygon(0 0, 100% 0%, 100% 90%, 0 100%); */
-  }
-}
-
 
 
 
@@ -204,6 +172,40 @@
   }
 }  
 
+
+
+
+@media(max-width:991px){
+  .bannermain {
+    display: grid;
+  
+    grid-template-columns: 12% 75% 10%; /*tres columnas de igual ancho*/
+    
+  
+    /* grid-template-rows: 15% 75%; */
+     margin-bottom: -7vh; 
+  
+    background-size: auto, cover;
+    /* height: 100vh; */
+    /* max-height: 100vh;  */
+    
+   
+  
+  
+    background-repeat: no-repeat;
+   
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  /* 
+    background-image: linear-gradient(
+         215deg,
+        rgba(36, 50, 90, 0.95),
+        rgba(67, 183, 174, 0.8)
+      ),
+      url("/img/image01.jpg");
+    clip-path: polygon(0 0, 100% 0%, 100% 90%, 0 100%); */
+  }
+}
 
 .left_column_color {
   transform: skew(3deg);
